[package]
name = "runes-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/kodylow/runes-rs"
description = "Runes - Simple Cookies You Can Extend (similar to Macaroons)"
documentation = "https://github.com/kodylow/runes-rs/blob/master/README.md"
readme = "README.md"
exclude = [".gitignore"]
[dependencies]
